--- a/ActiveDirectoryComputerInfoUpdater/ActiveDirectoryComputerInfoUpdater.csproj
+++ b/ActiveDirectoryComputerInfoUpdater/ActiveDirectoryComputerInfoUpdater.csproj
@@ -55,6 +55,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Logic\ActiveDirectory.cs" />
+    <Compile Include="Mvvm\DelegateCommand.cs" />
     <Compile Include="Mvvm\NotifyPropertyBase.cs" />
     <Compile Include="ViewModel\OrganizationalUnitsTreeViewModel.cs" />
     <Compile Include="ViewModel\WindowViewModel.cs" />
