Add loading of computer details.

--- a/ActiveDirectoryComputerInfoUpdater/ActiveDirectoryComputerInfoUpdater.csproj
+++ b/ActiveDirectoryComputerInfoUpdater/ActiveDirectoryComputerInfoUpdater.csproj
@@ -60,8 +60,10 @@
     <Compile Include="Mvvm\DelegateCommand.cs" />
     <Compile Include="Mvvm\NotifyPropertyBase.cs" />
     <Compile Include="Mvvm\TreeViewSelectionBehavior.cs" />
+    <Compile Include="ViewModel\ComputerViewModel.cs" />
     <Compile Include="ViewModel\OrganizationalUnitsTreeViewModel.cs" />
     <Compile Include="ViewModel\OrganizationalUnitViewModel.cs" />
+    <Compile Include="ViewModel\UserViewModel.cs" />
     <Compile Include="ViewModel\WindowViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
