--- a/ActiveDirectoryComputerInfoUpdater/App.config
+++ b/ActiveDirectoryComputerInfoUpdater/App.config
@@ -1,6 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="ActiveDirectoryComputerInfoUpdater.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
     </startup>
+    <userSettings>
+        <ActiveDirectoryComputerInfoUpdater.Properties.Settings>
+            <setting name="User" serializeAs="String">
+                <value>Administrator</value>
+            </setting>
+            <setting name="Password" serializeAs="String">
+                <value>***REMOVED***</value>
+            </setting>
+            <setting name="Domain" serializeAs="String">
+                <value />
+            </setting>
+        </ActiveDirectoryComputerInfoUpdater.Properties.Settings>
+    </userSettings>
 </configuration>
