--- a/ActiveDirectoryComputerInfoUpdater/ActiveDirectoryComputerInfoUpdater.csproj
+++ b/ActiveDirectoryComputerInfoUpdater/ActiveDirectoryComputerInfoUpdater.csproj
@@ -76,7 +76,7 @@
     <Compile Include="ViewModel\OrganizationalUnitViewModel.cs" />
     <Compile Include="ViewModel\UserViewModel.cs" />
     <Compile Include="ViewModel\WindowViewModel.cs" />
-    <Page Include="MainWindow.xaml">
+    <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -84,7 +84,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
