Background loading of the structure when app started.

--- a/ActiveDirectoryComputerInfoUpdater/App.config
+++ b/ActiveDirectoryComputerInfoUpdater/App.config
@@ -14,7 +14,7 @@
                 <value>Administrator</value>
             </setting>
             <setting name="Password" serializeAs="String">
-                <value>***REMOVED***</value>
+                <value />
             </setting>
             <setting name="Domain" serializeAs="String">
                 <value />
